# static-file-server

./: .clang-format  .clang-tidy  .clangd  .editorconfig  .gitignore  CMakeLists.txt  PLAN.md  README.md  config.h.in  flake.nix
.github/actions/wait-for-ec2-instance/: action.yml
.github/workflows/: e2e-server-test.yml
Nginx/: README.md  nginx.conf  run.sh
doc/: ASYNC_IO_FRAMEWORK.md  CACHE.md  FILE_IO.md  TODO.md
docker/: Dockerfile
example/asio/: awaitable_async_echo_server.cpp  blocking_tcp_echo_server.cpp  callback_async_echo_server.cpp
infra/: README.md  alarm.tf  iam.tf  main.tf  user_data.sh  user_data.sh.tpl  user_data_load_test.sh  variables.tf
k6/: README.md  script.js
results/: curl-output.txt  k6-on-awaitable-server.txt  k6-on-callback-server.txt  k6-on-nginx.txt  k6-on-server.txt
script/: build_and_push.sh
src/: CMakeLists.txt
src/calc/: CMakeLists.txt  calc.h
src/client/: CMakeLists.txt  client.cpp
src/connection/: CMakeLists.txt  client.hpp  connection.hpp  socket_connection.hpp  tls_connection.hpp
src/server/: CMakeLists.txt  awaitable_server.cpp  callback_server.cpp  server.cpp
src/util/: CMakeLists.txt  string_view.hpp  util.hpp
test/: CMakeLists.txt
test/asio/: CMakeLists.txt  test_asio.cpp  test_free_functions.cpp  test_streambuf.cpp  test_streamfile.cpp
test/cache/: CMakeLists.txt  test_cache.cpp
test/calc/: CMakeLists.txt  calc_benchmark.cpp  calc_test.cpp
test/client/: CMakeLists.txt  client_test.cpp
test/connection/: CMakeLists.txt  test_connection.cpp
